<?xml version="1.0"?>
<package format="2">
  <!--
   This file is mostly here to provide ros dependencies when this project is built with catkin
   -->
  <name>tornado</name>
  <version>:{version}</version>
  <description>
  Tornado is a Python web framework and asynchronous networking library, originally developed at FriendFeed. http://www.tornadoweb.org/
  </description>

  <license>BSD</license>

  <url type="repository">https://github.com/tornadoweb/tornado</url>
  <url type="bugtracker">https://github.com/tornadoweb/tornado/issues</url>

  <maintainer email="asmodehn@gmail.com">AlexV</maintainer>

  <buildtool_depend version_gte="0.6.18">catkin</buildtool_depend>
  <build_depend version_gte="0.1.15">catkin_pip</build_depend>

  <depend>backports_ssl_match_hostname</depend>               <!-- ubuntu deb available only from xenial 16.04. same version from yakkety 16.10. -->
  <!-- <depend>python-singledispatch</depend> -->             <!-- NOT needed for tornado 4.2.1 -->
  <depend>certifi</depend>                                    <!-- same version from xenial 16.04 -->
  <!-- <depend version_gte="0.4">backports_abc</depend> -->   <!-- NOT needed for tornado 4.2.1 -->

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>


